# lalanow-backend

./: .env-example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
app/: __init__.py  __main__.py  constants.py  dependencies.py  main.py
app/django_orm/: manage.py  settings.py  utils.py
app/django_orm/content/: config.py  db_utils.py  django_app.py  models.py
app/django_orm/content/management/commands/: makemessages.py
app/django_orm/content/management/utils/: create_messages.py
app/django_orm/content/migrations/: 0001_initial.py  0002_needhelpresource_wanttohelpresource.py  0003_wanttohelpresource_last_updated_and_more.py
app/routers/: resources.py  resources_nearby.py
app/schemas/: resources.py  resources_nearby.py
app/tests/: conftest.py
app/tests/utils/: simulate_request.py
etl/: malan_resources_sync.py
scripts/: build.sh  generate_encryption_key.py
